Editorial polish on virtual-platform alignment example
- Change orphaned trailing colon to a period on the line preceding the
  new preamble sentence
- Drop uncommon "consumer BOM" phrasing in favour of "BOM"
- Restore ctx.details.run { } scoping in the Groovy snippet to match
  the Kotlin variant's structure



Signed-off-by: Laura Kassovic <lkassovic@gradle.com>